library/general/imagedigests/example.yaml
apiVersion: v1
kind: Pod
metadata:
  name: opa
  namespace: digest-required
spec:
  containers:
    - name: opa
      image: openpolicyagent/opa@sha256:04ff8fce2afd1a3bc26260348e5b290e8d945b1fad4b4c16d22834c2f3a1814a
      args:
        - "run"
        - "--server"
        - "--addr=localhost:8080"
